Feat: query vuls with productName/packageId/severity